Fixing layout issues

--- a/style.css
+++ b/style.css
@@ -221,7 +221,6 @@ html {
     display: inline-flex;
     padding: 10px;
     margin: 1%;
-    margin-bottom: 10%;
     border-radius: 25px;
     border: solid 3px var(--primary);
     box-shadow: 15px 10px var(--secondary);
